--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -7,7 +7,7 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "build:dev": "tsc && vite build --mode development",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "lint": "eslint . --fix --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "prettier": "npx prettier . --write"
     },
@@ -18,16 +18,22 @@
     "devDependencies": {
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
-        "@typescript-eslint/eslint-plugin": "^6.0.0",
-        "@typescript-eslint/parser": "^6.0.0",
+        "@typescript-eslint/eslint-plugin": "^6.2.1",
+        "@typescript-eslint/parser": "^6.2.1",
         "@vitejs/plugin-react": "^4.0.3",
-        "eslint": "^8.45.0",
+        "eslint": "^8.2.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-typescript": "^17.1.0",
         "eslint-config-prettier": "^8.10.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-plugin-react-refresh": "^0.4.3",
         "prettier": "3.0.1",
         "sass": "^1.64.2",
-        "typescript": "^5.0.2",
+        "typescript": "^5.1.6",
         "vite": "^4.4.5"
     }
 }
