--- a/eCommerce-Application/tsconfig.json
+++ b/eCommerce-Application/tsconfig.json
@@ -2,24 +2,22 @@
     "compilerOptions": {
         "target": "ES2020",
         "useDefineForClassFields": true,
-        "lib": ["ES2020", "DOM", "DOM.Iterable"],
+        "lib": ["ES2020", "DOM", "DOM.Iterable", "ESNext"],
+        "allowJs": false,
         "module": "ESNext",
         "skipLibCheck": true,
-
-        /* Bundler mode */
         "moduleResolution": "bundler",
+        "allowSyntheticDefaultImports": true,
         "allowImportingTsExtensions": true,
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
-
-        /* Linting */
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": ["src"],
+    "include": [".eslintrc.cjs", "src"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
