--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -10,7 +10,8 @@
         "lint": "eslint . --fix --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "prettier": "npx prettier . --write",
-        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+        "prepare": "cd ../ && husky install ./eCommerce-Application/.husky"
     },
     "dependencies": {
         "react": "^18.2.0",
@@ -40,13 +41,25 @@
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
         "eslint-plugin-react-refresh": "^0.4.3",
+        "husky": "^8.0.3",
         "jest": "^29.6.2",
         "jest-environment-jsdom": "^29.6.2",
+        "lint-staged": "^13.2.3",
         "prettier": "3.0.1",
         "sass": "^1.64.2",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.6",
         "vite": "^4.4.5"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js,jsx, ts, tsx}": [
+            "npm test"
+        ]
     }
 }
