--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -58,8 +58,8 @@
         }
     },
     "lint-staged": {
-        "*.{js,jsx, ts, tsx}": [
-            "npm test"
+        "*.{tsx}": [
+            "npm run lint"
         ]
     }
 }
