--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -14,6 +14,9 @@
         "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
     },
     "dependencies": {
+        "@commercetools/platform-sdk": "^4.11.0",
+        "@commercetools/sdk-client-v2": "^2.2.0",
+        "isomorphic-fetch": "^3.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
