--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -16,6 +16,9 @@
     "dependencies": {
         "@commercetools/platform-sdk": "^4.11.0",
         "@commercetools/sdk-client-v2": "^2.2.0",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/joy": "^5.0.0-beta.1",
         "isomorphic-fetch": "^3.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
