--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -21,7 +21,8 @@
         "@mui/joy": "^5.0.0-beta.1",
         "isomorphic-fetch": "^3.0.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.15.0"
     },
     "devDependencies": {
         "@babel/core": "^7.22.9",
