--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -18,7 +18,8 @@
         "@commercetools/sdk-client-v2": "^2.2.0",
         "isomorphic-fetch": "^3.0.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.15.0"
     },
     "devDependencies": {
         "@babel/core": "^7.22.9",
