--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --host",
         "build": "tsc && vite build",
         "build:dev": "tsc && vite build --mode development",
         "lint": "eslint . --fix --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
