--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -11,7 +11,7 @@
         "prepare": "cd ../ && husky install ./eCommerce-Application/.husky",
         "preview": "vite preview",
         "prettier": "npx prettier . --write",
-        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+        "test": "vitest --coverage",
         "deploy": "vercel --prod"
     },
     "dependencies": {
@@ -32,13 +32,13 @@
         "@babel/preset-react": "^7.22.5",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^14.0.0",
-        "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^29.5.3",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@typescript-eslint/eslint-plugin": "^6.2.1",
         "@typescript-eslint/parser": "^6.2.1",
         "@vitejs/plugin-react": "^4.0.3",
+        "@vitest/coverage-v8": "^0.34.2",
         "babel-jest": "^29.6.2",
         "eslint": "^8.2.0",
         "eslint-config-airbnb": "^19.0.4",
@@ -58,6 +58,8 @@
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.6",
-        "vite": "^4.4.5"
+        "vite": "^4.4.5",
+        "vite-tsconfig-paths": "^4.2.0",
+        "vitest": "^0.34.2"
     }
 }
