--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -27,8 +27,12 @@
         "vercel": "^31.4.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.22.9",
+        "@babel/preset-env": "^7.22.9",
+        "@babel/preset-react": "^7.22.5",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.4.3",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@typescript-eslint/eslint-plugin": "^6.2.1",
@@ -48,6 +52,7 @@
         "husky": "^8.0.3",
         "prettier": "3.0.1",
         "sass": "^1.64.2",
+        "ts-node": "^10.9.1",
         "typescript": "^5.1.6",
         "vite": "^4.4.5",
         "vite-tsconfig-paths": "^4.2.0",
