--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -26,6 +26,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.15.0",
+        "react-spinners": "^0.13.8",
         "swiper": "^10.2.0",
         "vercel": "^31.4.0"
     },
