--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -22,6 +22,7 @@
         "@mui/icons-material": "^5.14.3",
         "@mui/joy": "^5.0.0-beta.1",
         "@mui/material": "^5.14.5",
+        "gsap": "^3.12.2",
         "isomorphic-fetch": "^3.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
