--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -22,13 +22,18 @@
         "@mui/icons-material": "^5.14.3",
         "@mui/joy": "^5.0.0-beta.1",
         "@mui/material": "^5.14.5",
+        "@reduxjs/toolkit": "^2.0.1",
         "gsap": "^3.12.2",
         "isomorphic-fetch": "^3.0.0",
         "locomotive-scroll": "^5.0.0-beta.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.15.0",
+        "react-redux": "^9.0.4",
+        "react-router-dom": "^6.21.2",
         "react-spinners": "^0.13.8",
+        "redux": "^5.0.1",
+        "redux-persist": "^6.0.0",
+        "reselect": "^5.1.0",
         "swiper": "^10.2.0",
         "vercel": "^31.4.0"
     },
