--- a/eCommerce-Application/package.json
+++ b/eCommerce-Application/package.json
@@ -26,6 +26,7 @@
         "gsap": "^3.12.2",
         "isomorphic-fetch": "^3.0.0",
         "locomotive-scroll": "^5.0.0-beta.8",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.0.4",
@@ -45,6 +46,7 @@
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.4.3",
         "@types/locomotive-scroll": "^4.1.1",
+        "@types/lodash": "^4.14.202",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@typescript-eslint/eslint-plugin": "^6.2.1",
